--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,3 +14,230 @@ a {
 * {
   box-sizing: border-box;
 }
+
+button {
+  cursor: pointer;
+  background: none;
+  border: none;
+}
+label {
+  text-align: center;
+}
+.option-wrapper input {
+  opacity: 0;
+}
+.option-container {
+  display: flex;
+  flex-direction: column;
+  width: 100vw;
+  align-items: center;
+}
+
+input + div {
+  display: inline-block;
+  background-color: white;
+  border: 2px solid #0694a8;
+  color: #0694a8;
+  padding: 0.5em;
+  border-radius: 5px;
+  min-width: 80px;
+  text-align: center;
+  margin: 1em;
+  cursor: pointer;
+}
+
+:disabled + div {
+  background-color: white;
+  border: 2px solid grey;
+  color: grey;
+  padding: 0.5em;
+  border-radius: 5px;
+  min-width: 80px;
+  text-align: center;
+  margin: 1em;
+  cursor: pointer;
+}
+
+:checked + div {
+  background-color: #0694a8;
+  border: 2px solid #0694a8;
+  color: white;
+  padding: 0.5em;
+  border-radius: 5px;
+  min-width: 80px;
+  text-align: center;
+  margin: 1em;
+  cursor: pointer;
+}
+
+.option-container-regions {
+  display: flex;
+  width: 100vw;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.option-container-regions img {
+  height: 70px;
+  cursor: pointer;
+}
+
+@media screen and (min-width: 400px) {
+  .option-container-regions img {
+    height: 90px;
+  }
+}
+
+.option-container-regions input:checked + img {
+  border: 2px solid #0694a8;
+  padding: 3px;
+  border-radius: 5px;
+}
+
+.option-container-qa {
+  display: flex;
+  flex-direction: row;
+}
+.heading-container {
+  color: white;
+  margin: 8px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #0694a8;
+  width: 100%;
+  text-align: center;
+  height: 2.5em;
+  font-size: 1.3em;
+}
+
+.difficulty-container {
+  display: flex;
+  justify-content: space-around;
+
+  margin: 10px;
+}
+
+.start-container {
+  display: flex;
+  justify-content: center;
+}
+
+.start-container > button {
+  display: flex;
+  background-color: white;
+  padding: 1em;
+  justify-content: center;
+  color: #ae0a32;
+  border-style: 3px, solid, #ae0a32;
+
+  font-size: 2em;
+}
+
+.playagain-container {
+  display: flex;
+  justify-content: center;
+}
+
+.playagain-container .start {
+  display: flex;
+  background-color: white;
+  padding: 1em;
+  justify-content: center;
+  color: #ae0a32;
+  border: 3px solid #ae0a32;
+  font-size: 2em;
+}
+
+/* .start {
+  background: none;
+  color: #ae0a32;
+  border: 3px, solid, #ae0a32;
+  margin: 1em;
+  border-style: none;
+  background-color: white;
+  display: flex;
+  justify-content: center;
+} */
+
+.flag button:hover {
+  border: none;
+  margin: 1em;
+  background-color: lightblue;
+  display: flex;
+  justify-content: center;
+  background: lightblue;
+}
+
+.flag {
+  max-width: 40vw;
+  border: 3px solid lightgrey;
+  margin: 0.2em;
+}
+@media screen and (min-width: 1000px) {
+  .flag {
+    width: 20vw;
+  }
+}
+
+.score,
+.questionCount {
+  margin: 1em;
+  font-weight: bold;
+  color: #0694a8;
+}
+
+.textanswer {
+}
+
+.question-container {
+  width: 50%;
+  margin-left: auto;
+  margin-right: auto;
+  min-width: 300px;
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 4em;
+  font-size: 24px;
+  background-color: #0694a8;
+  color: white;
+  text-align: center;
+}
+
+.answer-container,
+.flag-container {
+  min-width: 50%;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+
+.answer-container > button {
+  border: 3px solid #0694a8;
+  color: #0694a8;
+  font-size: 1.2em;
+  border-radius: 5px;
+  margin: 1em;
+  padding: 0.5em;
+  width: 30vw;
+  min-height: 70px;
+}
+@media screen and (max-width: 400px) {
+  .answer-container > button {
+    width: 60vw;
+    margin: 0.5em;
+  }
+}
+@media screen and (min-width: 400px) {
+  .answer-container > button {
+    max-width: 90vw;
+    margin: 0.5em;
+  }
+}
+
+.flag-container > button {
+}
